--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -273,3 +273,21 @@ footer {
 	padding-bottom: 3%;
 }
 }
+@media (min-width: 0) and (max-width: 767px) {
+/* function section*/
+	.mbshow{
+	display: inline;
+}
+	.pcshow{
+		display: none;
+	}
+}
+@media (min-width: 768px) and (max-width: 2500px) {
+/* function section*/
+.mbshow{
+	display: none;
+}
+.pcshow{
+	display:inline;
+}
+}
