--- a/css/layout.css
+++ b/css/layout.css
@@ -155,6 +155,11 @@ header {
 	float: left;
 	display: inline;
 }
+.nav-logo span i{
+    font-size: 30px;
+    margin-right: .3em;
+	vertical-align: -0.3em;
+}
 .nav-logo #l2 {
 }
 .nav-collapse {
@@ -929,6 +934,10 @@ section {
 	width:26%; 
 	text-align: center!important;
 }
+.txt .tdb{
+	color:#288dd8;
+}
+
 #function .row > .content > .columns {
 	width: 50%;/* max-width: 485px;*/
 	min-height: 90px;
